--- a/#src/scss/intro.scss
+++ b/#src/scss/intro.scss
@@ -199,7 +199,8 @@
 		}
 		.scroll__arrow-icon {
 			fill: $color-white;
-			margin-top: 15px;
+			margin-top: 20px;
+
 
 			&::before {
 				display: block;
@@ -208,6 +209,9 @@
 				width: 1px;
 				background-color: $color-white;
 				transform: translateX(5.5px);
+				overflow: hidden;
+				// animation 
+				animation: scroll-down 1.5s ease-in-out 3s infinite alternate-reverse;
 			}
 			.icon {
 				width: 12px;
@@ -225,14 +229,18 @@
 	}
 	&:hover {
 		cursor: pointer;
-		transform: translateY(45px);
-		transition: all 0.3s ease-in-out;
 	}
 	&:hover .scroll__subscribe {
 		opacity: 1;
+
 	}
-	&:hover .scroll__arrow-icon::before {
-		height: 30px;
-		transition: all 0.3s ease-in-out;
+}
+
+@keyframes scroll-down{
+	0%{
+		height: 40px;
+	}
+	100%{
+		height: 70px;
 	}
 }
