--- a/Wooder/css/style.css
+++ b/Wooder/css/style.css
@@ -654,7 +654,7 @@ h6 {
 
 .scroll .scroll_inner .scroll__arrow-icon {
   fill: #ffff;
-  margin-top: 15px;
+  margin-top: 20px;
 }
 
 .scroll .scroll_inner .scroll__arrow-icon::before {
@@ -666,6 +666,8 @@ h6 {
   -webkit-transform: translateX(5.5px);
       -ms-transform: translateX(5.5px);
           transform: translateX(5.5px);
+  overflow: hidden;
+  animation: scroll-down 1.5s ease-in-out 3s infinite alternate-reverse;
 }
 
 .scroll .scroll_inner .scroll__arrow-icon .icon {
@@ -688,23 +690,30 @@ h6 {
 
 .scroll:hover {
   cursor: pointer;
-  -webkit-transform: translateY(45px);
-      -ms-transform: translateY(45px);
-          transform: translateY(45px);
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
 }
 
 .scroll:hover .scroll__subscribe {
   opacity: 1;
 }
 
-.scroll:hover .scroll__arrow-icon::before {
-  height: 30px;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+@-webkit-keyframes scroll-down {
+  0% {
+    height: 40px;
+  }
+
+  100% {
+    height: 70px;
+  }
+}
+
+@keyframes scroll-down {
+  0% {
+    height: 40px;
+  }
+
+  100% {
+    height: 70px;
+  }
 }
 
 .sidebar {
